tests/ui/impl-trait/auto-trait-leakage/auto-trait-contains-err.stderr
error[E0277]: `()` is not a future
  --> $DIR/auto-trait-contains-err.rs:5:24
   |
LL | fn invalid_future() -> impl Future {}
   |                        ^^^^^^^^^^^ `()` is not a future
   |
   = help: the trait `Future` is not implemented for `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
